PT2: Enhanced Format

--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "app/**/*.{rb}": "rubocop -a"
+    "app/**/*.{rb}": "rubocop -A"
   }
 }
